feat: 补全缺失功能项及负责功能
  - 新增命令: GET/KEYS/EXISTS/MUPD/COLLECTION/CLUSTER (6个Handler)
  - LSM-Tree存储引擎: MemTable + SSTable(稀疏索引/BloomFilter) + Size-tiered Compaction
  - Entry支持多值类型(STRING/LIST/MAP)
  - 集群模式: Master-Slave + Raft-like动态选举 + 心跳 + 数据复制
  - RESTful API (JDK内置HttpServer, 7个端点)
  - CLI交互工具(REPL) + Swing GUI客户端
  - Response新增MULTI类型, SocketClient支持多行响应
  - ShellClient帮助信息更新, 默认端口改为9090
  - 冒烟测试扩展覆盖全部命令